--- a/stock/index.html
+++ b/stock/index.html
@@ -167,14 +167,10 @@
   <div class="form">
     <input id="dart-year" type="number" value="2026" min="2015" />
     <input id="dart-month" type="number" value="2" min="1" max="12" />
-    <button id="import-dart" class="btn primary" type="button">
-      DART에서 일정 자동 채우기
-    </button>
-  </div>
-  <small id="dart-status" class="muted"></small>
-</div>
-<button id="import-dart" type="button">DART에서 원클릭 가져오기</button>
+<button id="import-dart" type="button" onclick="alert('클릭됨')">DART에서 일정 자동 채우기</button>
 <div id="import-status"></div>
 </body>
+
 </html>
+
 
