--- a/stock/index.html
+++ b/stock/index.html
@@ -3,17 +3,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>공모 알림 (가족 체크)</title>
+  <title>공모 알림 (4인가족)</title>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#111111" />
   <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
   <header class="header">
     <div class="title">
       <h1>공모 알림</h1>
-      <p>가족 체크 + 캘린더(.ics) + 미리알림(단축어) + 자동 가져오기</p>
+      <p>가족 체크 + 캘린더(.ics) + 미리알림(단축어용 텍스트) + 자동 가져오기</p>
     </div>
     <nav class="tabs">
       <button class="tab active" data-tab="events">일정</button>
@@ -28,24 +27,23 @@
       <div class="card">
         <h2>자동 가져오기</h2>
         <p class="muted">
-          범위: <b>오늘 ~ 다음달 말</b> (이번달+다음달을 자동으로 합쳐서 보여줘요)
+          범위: <b>오늘 ~ 다음달 말</b> (이번달 + 다음달을 합쳐서 보여줘요)
         </p>
-
         <div class="row">
           <button id="import-dart-range" class="btn primary" type="button">DART에서 일정 자동 채우기</button>
-          <button id="reset-imported" class="btn" type="button">가져온 일정 초기화</button>
+          <button id="reset-store" class="btn" type="button">가져온 일정 초기화(완전)</button>
         </div>
-
         <div id="import-status" class="muted" style="margin-top:10px;"></div>
         <small class="muted">
-          ※ “공모주만” 필터는 <b>상장사(유상증자/권리 등)</b>를 최대한 제외하는 방식이에요. 최종은 공시로 확인!
+          ※ “완전 초기화”는 아이폰에서 캐시/서비스워커 때문에 0개가 계속 뜨는 문제를 막기 위해,
+          저장/캐시를 싹 지우고 새로고침합니다.
         </small>
       </div>
 
       <div class="card">
         <div class="row space">
           <h2>공모주 일정</h2>
-          <small class="muted">오른쪽 체크박스로 가족별 “준비/청약완료” 체크만 하세요.</small>
+          <small class="muted">체크박스는 “준비/청약완료” 표시용이에요.</small>
         </div>
         <div id="events-list" class="list"></div>
       </div>
@@ -53,7 +51,7 @@
       <div class="card note">
         <h3>주의</h3>
         <p class="muted">
-          일정은 참고용입니다. 최종 청약 일정/주간사는 반드시 공식 공시로 확인하세요.
+          일정은 참고용입니다. 최종 청약 일정/주간사/최소증거금은 반드시 공식 공시로 확인하세요.
         </p>
       </div>
     </section>
@@ -80,7 +78,7 @@
       <div class="card">
         <h2>가족 목록</h2>
         <div id="family-list" class="list"></div>
-        <small class="muted">기본 4명이 자동 생성돼요. 필요하면 이름만 바꿔도 OK.</small>
+        <small class="muted">기본으로 4명이 자동 생성돼요. 필요하면 이름만 바꿔도 OK.</small>
       </div>
     </section>
 
@@ -89,7 +87,8 @@
       <div class="card">
         <h2>캘린더(.ics) 내보내기</h2>
         <p class="muted">
-          아이폰에서는 .ics 파일을 열면 캘린더로 “가져오기”가 됩니다.
+          아이폰에서는 .ics 파일을 열면 Apple Calendar로 “가져오기”가 됩니다.
+          (알림은 캘린더 앱 알림 설정에 따릅니다)
         </p>
 
         <div class="form">
@@ -99,42 +98,24 @@
           </label>
 
           <div class="row">
-            <button id="export-starred" class="btn primary" type="button">⭐ 관심 일정만 .ics 다운로드</button>
-            <button id="export-all" class="btn" type="button">전체 일정 .ics 다운로드</button>
+            <button id="export-all" class="btn primary">전체 일정 .ics 다운로드</button>
           </div>
 
           <details class="details">
-            <summary>아이폰에서 알림 제대로 울리게 설정</summary>
+            <summary>미리알림(아이폰 기본 Reminders)로 넣고 싶으면</summary>
             <ul class="muted">
-              <li>캘린더 앱 → <b>캘린더</b> → 새 캘린더(예: “공모 알림”)를 만들어두면 관리가 쉬워요.</li>
-              <li>.ics 가져올 때 그 캘린더로 넣으면, 나중에 캘린더만 꺼/삭제하면 정리 끝.</li>
-              <li>설정 → 알림 → 캘린더 → 알림 허용이 켜져 있어야 해요.</li>
+              <li>웹에서 미리알림 앱에 “직접 자동 추가”는 제한이 있어요.</li>
+              <li>대신 아래 버튼으로 <b>단축어용 텍스트</b>를 복사 → 단축어에서 “클립보드 텍스트로 미리알림 여러 개 만들기” 흐름으로 넣는 게 가장 안정적이에요.</li>
             </ul>
+            <button id="copy-reminders-text" class="btn" type="button">미리알림(단축어용) 텍스트 복사</button>
+            <div id="copy-status" class="muted" style="margin-top:8px;"></div>
           </details>
         </div>
-      </div>
-
-      <div class="card">
-        <h2>미리알림(아이폰 Reminders) 추가</h2>
-        <p class="muted">
-          웹앱에서 “미리알림”을 완전 자동으로 넣으려면 <b>단축어(Shortcuts)</b>를 한 번만 만들어야 해요.
-          일정 카드의 <b>미리알림</b> 버튼은 해당 단축어를 실행합니다.
-        </p>
-        <details class="details">
-          <summary>단축어 만들기(처음 1번만)</summary>
-          <ol class="muted">
-            <li>아이폰 “단축어” 앱 열기 → “+” 새 단축어</li>
-            <li>이름을 정확히: <b>공모주 미리알림 추가</b></li>
-            <li>동작 추가: “미리 알림 추가”</li>
-            <li>입력(텍스트)을 제목/메모에 넣도록 설정 (앱에서 전달해줌)</li>
-            <li>저장</li>
-          </ol>
-        </details>
       </div>
     </section>
   </main>
 
-  <!-- MODAL (남겨둠: 필요하면 확장) -->
+  <!-- MODAL -->
   <div id="modal" class="modal hidden" aria-hidden="true">
     <div class="modal-card">
       <div class="modal-head">
